--- a/app/src/main/res/layout/activity_detail_discover.xml
+++ b/app/src/main/res/layout/activity_detail_discover.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/white"
     android:orientation="vertical"
     tools:context=".activity.ActivityDetail">
@@ -48,15 +49,23 @@
             android:background="@color/white"
             android:orientation="vertical">
 
-            <androidx.viewpager.widget.ViewPager
+            <androidx.viewpager2.widget.ViewPager2
+                android:id="@+id/viewpage2_discover"
                 android:layout_width="match_parent"
                 android:layout_height="218dp"
                 android:layout_marginLeft="12dp"
                 android:layout_marginTop="26dp"
-                android:layout_marginRight="12dp" />
+                android:layout_marginRight="12dp"/>
 
+            <me.relex.circleindicator.CircleIndicator3
+                android:id="@+id/cicler_indicator3"
+                android:layout_width="wrap_content"
+                app:ci_drawable="@drawable/bt_indicator"
+                android:layout_gravity="center"
+                android:layout_height="40dp"
+                android:layout_margin="5dp"/>
             <TextView
-                android:id="@+id/tile_detail_newfeed"
+                android:id="@+id/tile_detail_discover_newfeed"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="12dp"
@@ -68,7 +77,7 @@
                 android:textSize="24sp" />
 
             <TextView
-                android:id="@+id/tile_contentTitle_newfeed"
+                android:id="@+id/tile_contentTitle_discover_newfeed"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="12dp"
