--- a/app/src/main/res/layout/custom_text_dichvu.xml
+++ b/app/src/main/res/layout/custom_text_dichvu.xml
@@ -11,6 +11,7 @@
 
         <TextView
             android:id="@+id/tv_text"
+            android:textColor="@color/black"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fontFamily="@font/roboto_light"
