--- a/app/src/main/res/layout/adapter_rc_btntime.xml
+++ b/app/src/main/res/layout/adapter_rc_btntime.xml
@@ -16,6 +16,7 @@
         android:text="8h"
         android:textSize="16dp"
         android:textStyle="bold"
+        android:clickable="false"
         tools:ignore="TouchTargetSizeCheck" />
 
 </LinearLayout>
