--- a/app/src/main/res/layout/activity_chinhsachbaomat.xml
+++ b/app/src/main/res/layout/activity_chinhsachbaomat.xml
@@ -25,7 +25,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginLeft="30dp"
+            android:layout_marginLeft="25dp"
             android:fontFamily="@font/bevietnampro_regular"
             android:text="Chính sách bảo mật thông tin"
             android:textColor="@color/black"
@@ -51,22 +51,21 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="12dp"
-                android:layout_marginTop="36dp"
-                android:layout_marginRight="12dp"
+                android:layout_marginHorizontal="60dp"
+                android:layout_marginTop="21dp"
                 android:fontFamily="@font/roboto_medium"
                 android:gravity="center"
+                android:textAllCaps="true"
                 android:text="@string/KHAMPHA_txtChinhSachBaoMat"
                 android:textColor="@color/black"
-                android:textSize="20sp" />
-
+                android:textSize="16sp" />
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="12dp"
-                android:layout_marginTop="45dp"
+                android:layout_marginTop="13dp"
                 android:fontFamily="@font/bevietnampro_semibold"
-                android:text="@string/KHAMPHA_txtTitle1"
+                android:text="@string/GDC_txtTitle3"
                 android:textColor="@color/black"
                 android:textSize="16sp" />
 
@@ -74,9 +73,92 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="12dp"
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="5dp"
                 android:fontFamily="@font/roboto_regular"
-                android:text="@string/KHAMPHA_content1"
+                android:text="@string/GDCTitle3_content31"
+                android:textColor="@color/black"
+                android:textSize="14sp" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="12dp"
+                android:fontFamily="@font/roboto_regular"
+                android:text="@string/GDCTitle3_content32"
+                android:textColor="@color/black"
+                android:textSize="14sp" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="12dp"
+                android:fontFamily="@font/roboto_regular"
+                android:text="@string/GDCTitle3_content33"
+                android:textColor="@color/black"
+                android:textSize="14sp" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="12dp"
+                android:fontFamily="@font/roboto_regular"
+                android:text="@string/GDCTitle3_content34"
+                android:textColor="@color/black"
+                android:textSize="14sp" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="12dp"
+                android:fontFamily="@font/roboto_regular"
+                android:text="@string/GDCTitle3_content35"
+                android:textColor="@color/black"
+                android:textSize="14sp" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="12dp"
+                android:fontFamily="@font/roboto_regular"
+                android:text="@string/GDCTitle3_content36"
+                android:textColor="@color/black"
+                android:textSize="14sp" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="12dp"
+                android:fontFamily="@font/roboto_regular"
+                android:text="@string/GDCTitle3_content37"
+                android:textColor="@color/black"
+                android:textSize="14sp" />
+            <!---->
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="12dp"
+                android:layout_marginTop="8dp"
+                android:fontFamily="@font/bevietnampro_semibold"
+                android:text="@string/GDC_txtTitle4"
+                android:textColor="@color/black"
+                android:textSize="16sp" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="12dp"
+                android:layout_marginTop="5dp"
+                android:fontFamily="@font/roboto_regular"
+                android:text="@string/GDCTitle4_content41"
+                android:textColor="@color/black"
+                android:textSize="14sp" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="12dp"
+                android:fontFamily="@font/roboto_regular"
+                android:text="@string/GDCTitle4_content42"
                 android:textColor="@color/black"
                 android:textSize="14sp" />
             <!--            -->
@@ -86,7 +168,7 @@
                 android:layout_marginHorizontal="12dp"
                 android:layout_marginTop="8dp"
                 android:fontFamily="@font/bevietnampro_semibold"
-                android:text="@string/KHAMPHA_txtTitle2"
+                android:text="@string/GDC_txtTitle5"
                 android:textColor="@color/black"
                 android:textSize="16sp" />
 
@@ -94,9 +176,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="12dp"
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="5dp"
                 android:fontFamily="@font/roboto_regular"
-                android:text="@string/KHAMPHA_content2"
+                android:text="@string/GDCTitle5_content51"
                 android:textColor="@color/black"
                 android:textSize="14sp" />
             <!--            -->
@@ -106,7 +188,7 @@
                 android:layout_marginHorizontal="12dp"
                 android:layout_marginTop="8dp"
                 android:fontFamily="@font/bevietnampro_semibold"
-                android:text="@string/KHAMPHA_txtTitle3"
+                android:text="@string/GDC_txtTitle6"
                 android:textColor="@color/black"
                 android:textSize="16sp" />
 
@@ -114,29 +196,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="12dp"
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="5dp"
                 android:fontFamily="@font/roboto_regular"
-                android:text="@string/KHAMPHA_content3"
-                android:textColor="@color/black"
-                android:textSize="14sp" />
-            <!--            -->
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="12dp"
-                android:layout_marginTop="8dp"
-                android:fontFamily="@font/bevietnampro_semibold"
-                android:text="@string/KHAMPHA_txtTitle4"
-                android:textColor="@color/black"
-                android:textSize="16sp" />
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="12dp"
-                android:layout_marginTop="8dp"
-                android:fontFamily="@font/roboto_regular"
-                android:text="@string/KHAMPHA_content4"
+                android:text="@string/GDCTitle6_content61"
                 android:textColor="@color/black"
                 android:textSize="14sp" />
         </LinearLayout>
