--- a/app/src/main/res/layout/activity_ban_gia.xml
+++ b/app/src/main/res/layout/activity_ban_gia.xml
@@ -5,7 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:weightSum="10"
     tools:context=".activity.BanGiaActivity">
     <LinearLayout
         android:layout_width="match_parent"
@@ -14,46 +13,34 @@
         android:paddingVertical="10dp"
         >
         <ImageView
+            android:id="@+id/btnhomeBangGia"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_vt_home_32"
-            android:layout_marginStart="12dp"
-            android:id="@+id/btnhomeBangGia"
-            />
+            android:layout_marginLeft="12dp"
+            android:src="@drawable/ic_vt_back_24" />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:paddingEnd="40dp"
-            android:text="Bảng Giá Dịch Vụ"
+            android:layout_marginEnd="40dp"
+            android:fontFamily="@font/robotomedium"
+            android:text="Bảng giá"
             android:textColor="@color/black"
-            android:textSize="24dp" />
+            android:textSize="18sp" />
     </LinearLayout>
-    <androidx.cardview.widget.CardView
-        android:layout_weight="0.5"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:layout_margin="20dp"
-        app:cardBackgroundColor="#D8F4E8"
-        app:cardCornerRadius="40dp">
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_gravity="center"
-            android:text="Hãy để Salon phục vụ anh với những thứ tốt nhất "
-            android:gravity="center"/>
-    </androidx.cardview.widget.CardView>
 <GridView
     android:layout_width="match_parent"
-    android:layout_height="0dp"
-    android:layout_weight="8.5"
+    android:layout_height="match_parent"
     android:numColumns="2"
+    android:gravity="center"
+    android:layout_marginTop="20dp"
+    android:verticalSpacing="10dp"
+    android:layout_marginHorizontal="12dp"
     android:id="@+id/banggia_gridview"/>
     <com.google.android.material.button.MaterialButton
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
+        android:layout_height="wrap_content"
         android:backgroundTint="#E8E6E6"
         android:text="Đặt Lịch Ngay"
         android:textColor="@color/black"
