--- a/app/src/main/res/layout/item_banggia.xml
+++ b/app/src/main/res/layout/item_banggia.xml
@@ -1,67 +1,79 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
-    android:weightSum="5"
-    android:layout_height="match_parent">
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
-    <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:cardElevation="3dp"
-        app:cardCornerRadius="10dp"
-        app:cardUseCompatPadding="true"
-        >
+    <LinearLayout
+        android:layout_width="160dp"
+        android:layout_height="210dp"
+        android:orientation="vertical"
+        android:weightSum="10">
+
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:padding="10dp"
-            android:orientation="vertical"
-            android:gravity="center">
+            android:layout_height="wrap_content"
+            android:layout_weight="8.9"
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/item_banggia_img"
+                android:layout_width="fill_parent"
+                android:layout_height="128dp"
+                android:layout_marginTop="-7dp"
+                />
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:background="#FFF"
-                >
-                <ImageView
-                    android:minHeight="200dp"
-                    android:minWidth="200dp"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:src="@drawable/tocnamdep"
-                    android:id="@+id/item_banggia_img"/>
-                <TextView
-                    android:gravity="left"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="ShineCombo cắt gội 10 bước"
-                    android:textSize="20dp"
-                    android:textStyle="bold"
-                    android:textColor="@color/black"
-                    android:id="@+id/item_banggia_tvName"/>
-                <TextView
+                android:layout_height="60dp"
+                android:layout_marginTop="-12dp"
+                android:background="#262626"
+                android:orientation="vertical">
 
+                <TextView
+                    android:id="@+id/item_banggia_tvName"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Đặc sắc nổi tiếng"
-                    android:textColor="@color/black"
-                    android:id="@+id/item_banggia_tvDesc"/>
+                    android:layout_marginHorizontal="10dp"
+                    android:layout_marginTop="8dp"
+                    android:fontFamily="@font/bevietnampro_light"
+                    android:textColor="#FFFFFF"
+                    android:textSize="12sp" />
+
+                <TextView
+                    android:id="@+id/item_banggia_tvDesc"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="10dp"
+                    android:layout_marginTop="5dp"
+                    android:fontFamily="@font/roboto_light"
+                    android:textColor="@color/white"
+                    android:textSize="10sp" />
+
+
+            </LinearLayout>
+        </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="35dp"
+                android:layout_marginTop="-37dp"
+                android:background="#262626"
+                android:layout_weight=".4"
+                android:orientation="vertical">
 
                 <TextView
                     android:id="@+id/item_banggia_tvPrice"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="100k"
-                    android:textColor="#BD190D"
-                    android:textSize="15dp"
-                    android:textStyle="bold" />
+                    android:layout_marginHorizontal="10dp"
+                    android:layout_marginTop="10dp"
+                    android:fontFamily="@font/roboto_medium"
+                    android:textColor="#E9D462"
+                    android:textSize="12sp" />
             </LinearLayout>
 
-        </LinearLayout>
+    </LinearLayout>
 
-    </androidx.cardview.widget.CardView>
 </LinearLayout>
