--- a/app/src/main/res/layout/item_banggia.xml
+++ b/app/src/main/res/layout/item_banggia.xml
@@ -9,6 +9,8 @@
         android:layout_width="160dp"
         android:layout_height="210dp"
         android:orientation="vertical"
+        android:background="@color/white"
+
         android:weightSum="10">
 
         <LinearLayout
@@ -21,7 +23,7 @@
                 android:id="@+id/item_banggia_img"
                 android:layout_width="fill_parent"
                 android:layout_height="128dp"
-                android:layout_marginTop="-7dp"
+                android:layout_marginTop="-10dp"
                 />
 
             <LinearLayout
@@ -57,10 +59,10 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="35dp"
-                android:layout_marginTop="-37dp"
+                android:layout_height="40dp"
+                android:layout_marginTop="-40dp"
                 android:background="#262626"
-                android:layout_weight=".4"
+                android:layout_weight="1.1"
                 android:orientation="vertical">
 
                 <TextView
