--- a/app/src/main/res/layout/activity_thongt_tin_ho_tro_kh.xml
+++ b/app/src/main/res/layout/activity_thongt_tin_ho_tro_kh.xml
@@ -39,7 +39,7 @@
                     <ImageView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:src="@drawable/thuy"
+                        android:src="@drawable/ic_logo"
                         android:layout_marginLeft="9dp"
                         android:id="@+id/home_img_avt_user" />
                 </androidx.cardview.widget.CardView>
@@ -49,7 +49,7 @@
                 android:textSize="20sp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/txtname"
+                android:text="Happy Baber Shop"
                 android:layout_gravity="center_vertical"
                 android:textColor="@color/black"
                 android:textAllCaps="true"
