--- a/app/src/main/res/layout/activity_thongt_tin_ho_tro_kh.xml
+++ b/app/src/main/res/layout/activity_thongt_tin_ho_tro_kh.xml
@@ -23,27 +23,13 @@
                 android:layout_marginVertical="40dp"
                 android:layout_marginLeft="12dp"
                 android:src="@drawable/ic_vt_back_24" />
-            <androidx.cardview.widget.CardView
-                android:layout_gravity="center"
+            <de.hdodenhof.circleimageview.CircleImageView
                 android:layout_width="70dp"
                 android:layout_height="70dp"
-                android:layout_marginLeft="10dp"
-                app:cardBackgroundColor="@color/white"
-                app:cardCornerRadius="250dp">
+                android:layout_gravity="center"
 
-                <androidx.cardview.widget.CardView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    app:cardCornerRadius="250dp">
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:src="@drawable/ic_logo"
-                        android:layout_marginLeft="9dp"
-                        android:id="@+id/home_img_avt_user" />
-                </androidx.cardview.widget.CardView>
-            </androidx.cardview.widget.CardView>
+                android:src="@drawable/ic_logo"
+                android:layout_marginLeft="10dp"/>
             <TextView
                 android:layout_marginLeft="17dp"
                 android:textSize="20sp"
